--- a/Views/Auth/Login.ejs
+++ b/Views/Auth/Login.ejs
@@ -10,13 +10,11 @@
 
 <!-- Navbar -->
 <div class="navbar">
-    <div class="logo"><a href="../UniBite.ejs">UniBite</a></div>
+    <div class="logo"><a href="/">UniBite</a></div>
     <div class="nav-links">
-        <a href="/Stores">Stores</a>
-        <a href="/About-us">About Us</a>
         <a href="/Help">Help</a>
     </div>
-    <button class="signup-btn">Sign Up</button>
+    <a href="/signup" class="signup-btn">Sign Up</a>
 </div>
 
 <!-- Login Form Container -->
