--- a/Views/Auth/VerifyEmail.ejs
+++ b/Views/Auth/VerifyEmail.ejs
@@ -9,13 +9,13 @@
 <body>
     <!-- Navbar -->
     <div class="navbar">
-        <div class="logo"><a href="/">UniBite.</a></div>
+        <div class="logo"><a href="/">UniBite</a></div>
         <div class="nav-links">
-            <a href="/Stores">Restaurants</a>
+            <a href="/Stores">Stores</a>
             <a href="/About-us">About Us</a>
             <a href="/Help">Help</a>
         </div>
-        <button class="login-btn">Login</button>
+        <a href="/login" class="signup-btn">Login</a>
     </div>
 
     <!-- Verification Container -->
