--- a/Views/Auth/Login.ejs
+++ b/Views/Auth/Login.ejs
@@ -54,7 +54,7 @@
         </form>
 
         <div class="forgot-password">
-            <a href="#">Forgot password?</a>
+            <a href="/api/users/forgot-password">Forgot password?</a>
         </div>
         
         <div class="restaurant-owner">
