--- a/Views/Auth/ForgotPassword.ejs
+++ b/Views/Auth/ForgotPassword.ejs
@@ -10,20 +10,32 @@
 <body>
     <div class="main-content">
         <div class="login-container">
-            <h2>Forgot Password</h2>
-            <p class="forgot-password-text">Enter your email address and we'll send you a link to reset your password.</p>
+            <h2> Forgot Password</h2>
+            <p class="forgot-password-text">
+                <i class="fas fa-envelope"></i>
+                Enter your email address and we'll send you a link to reset your password.
+            </p>
 
             <form id="forgotPasswordForm">
                 <div class="input-group">
-                    <input type="email" id="email" class="input-field" placeholder="Email Address" required />
+                    <div class="input-icon-wrapper">
+                        <i class="fas fa-envelope"></i>
+                        <input type="email" id="email" class="input-field" placeholder="example@miuegypt.edu.eg" required />
+                    </div>
                 </div>
-                <div class="button-container">
-                    <button type="submit" class="button">Send Reset Link</button>
+                <div class="button-container centered">
+                    <button type="submit" class="button">
+                        <i class="fas fa-paper-plane"></i>
+                        Send Reset Link
+                    </button>
                 </div>
             </form>
 
             <div class="back-to-login">
-                <a href="/login">Back to Login</a>
+                <a href="/login">
+                    <i class="fas fa-arrow-left"></i>
+                    Back to Login
+                </a>
             </div>
         </div>
     </div>
