--- a/Views/Auth/ResetPassword.ejs
+++ b/Views/Auth/ResetPassword.ejs
@@ -11,7 +11,9 @@
     <div class="main-content">
         <div class="login-container">
             <h2>Reset Password</h2>
-            <p class="reset-password-text">Please enter your new password below.</p>
+            <p class="reset-password-text">
+                Please enter your new password below.
+            </p>
 
             <form id="resetPasswordForm">
                 <div class="input-group">
@@ -31,22 +33,27 @@
                     </div>
                 </div>
                 <div class="password-requirements">
-                    <p>Password must contain:</p>
+                    <p>Password Requirements:</p>
                     <ul>
-                        <li>At least 8 characters</li>
-                        <li>One uppercase letter</li>
-                        <li>One lowercase letter</li>
-                        <li>One number</li>
-                        <li>One special character</li>
+                        <li id="req-length"><i class="fas fa-times-circle"></i> At least 8 characters</li>
+                        <li id="req-uppercase"><i class="fas fa-times-circle"></i> One uppercase letter</li>
+                        <li id="req-lowercase"><i class="fas fa-times-circle"></i> One lowercase letter</li>
+                        <li id="req-number"><i class="fas fa-times-circle"></i> One number</li>
+                        <li id="req-special"><i class="fas fa-times-circle"></i> One special character</li>
                     </ul>
                 </div>
-                <div class="button-container">
-                    <button type="submit" class="button">Reset Password</button>
+                <div class="button-container centered">
+                    <button type="submit" class="button">
+                        Reset Password
+                    </button>
                 </div>
             </form>
 
             <div class="back-to-login">
-                <a href="/login">Back to Login</a>
+                <a href="/login">
+                    <i class="fas fa-arrow-left"></i>
+                    Back to Login
+                </a>
             </div>
         </div>
     </div>
