--- a/Views/Auth/SignUp.ejs
+++ b/Views/Auth/SignUp.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UniBite - Sign up</title>
     <link rel="stylesheet" href="/Styles/Login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
@@ -52,6 +53,16 @@
                         </svg>
                     </button>
                 </div>
+            </div>
+            <div class="password-requirements">
+                <p>Password Requirements:</p>
+                <ul>
+                    <li id="req-length"><i class="fas fa-times-circle"></i> At least 8 characters</li>
+                    <li id="req-uppercase"><i class="fas fa-times-circle"></i> One uppercase letter</li>
+                    <li id="req-lowercase"><i class="fas fa-times-circle"></i> One lowercase letter</li>
+                    <li id="req-number"><i class="fas fa-times-circle"></i> One number</li>
+                    <li id="req-special"><i class="fas fa-times-circle"></i> One special character</li>
+                </ul>
             </div>
             <label class="termsAndConditions">By creating an account you agree to the Privacy Policy and to the terms of use</label>
             <div class="button-container" style="width: 100%;">
