--- a/Views/Help.ejs
+++ b/Views/Help.ejs
@@ -430,6 +430,6 @@
 <%- include('partials/Footer') %>
 
 <!-- Scripts -->
-<script src="/JavaScript/main.js"></script>
+<script src="/JavaScript/help.js"></script>
 </body>
 </html>
